Design of the notices was added

--- a/src/app/shared/notices/notices-content-container/notices-content-container.component.html
+++ b/src/app/shared/notices/notices-content-container/notices-content-container.component.html
@@ -1,7 +1,9 @@
 <ng-container *ngIf="{
-    notice: (notice$ | async)
+  notice: (notice$ | async),
+  channel: (channel$ | async)
 } as data">
     <mr-notices-content
       [notice]="data.notice"
+      [channel]="data.channel"
     ></mr-notices-content>
 </ng-container>
