Show admin when user is common was fixed

--- a/src/app/ui/blocks/aside-menu/aside-menu.component.html
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.html
@@ -2,7 +2,7 @@
   <div class="aside-menu__content">
     <div class="aside-menu__menu">
       <mr-item-menu
-        *ngFor="let channel of channels"
+        *ngFor="let channel of channelsFiltered"
         [item]="channel"
       ></mr-item-menu>
     </div>
