--- a/src/app/ui/blocks/channels-content/channels-content.component.scss
+++ b/src/app/ui/blocks/channels-content/channels-content.component.scss
@@ -87,6 +87,7 @@
       }
 
       &__image {
+        cursor: pointer;
         width: styles.$box-wth-double;
         height: styles.$box-hht-double;
       }
