--- a/src/app/ui/_styles/_colors.scss
+++ b/src/app/ui/_styles/_colors.scss
@@ -2,16 +2,16 @@ $_red-20: #F93548;
 $_red-10: #ff6675;
 $_red-0: #F5CAD8;
 
-$_green-10: #4BAC3C;
+$_green-10: #56ae50;
 $_green-0: #D6E19A;
 
-$_blue-10: #4793A2;
+$_blue-10: #4ca1be;
 $_blue-0: #BFDEDC;
 
-$_orange-10: #FF5000;
+$_orange-10: #ff6a00;
 $_orange-0: #F0C280;
 
-$_yellow-10: #FFCF00;
+$_yellow-10: #fdd923;
 $_yellow-0: #FBE69C;
 
 $_neutral-40: #111010;
