--- a/src/app/ui/blocks/notices-content/notices-content.component.html
+++ b/src/app/ui/blocks/notices-content/notices-content.component.html
@@ -75,4 +75,10 @@
       [alt]="'bg-wave'"
     ></mr-image>
   </figure>
+
+  <mr-button-icon
+    [icon]="'arrow-left'"
+    (clicked)="handleToBack()"
+    class="notices-content__back"
+  ></mr-button-icon>
 </div>
