--- a/src/app/ui/blocks/notices-content/notices-content.component.scss
+++ b/src/app/ui/blocks/notices-content/notices-content.component.scss
@@ -160,6 +160,13 @@ a {
     height: 50%;
     z-index: -1;
   }
+
+  &__back {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 1;
+  }
 }
 
 @media (max-width: styles.$bkp-mobile) {
