--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.scss
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.scss
@@ -26,3 +26,10 @@
     margin-top: styles.$box-mrg-base;
   }
 }
+
+.admin-users__back {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  z-index: 1;
+}
