--- a/src/app/ui/blocks/navbar/navbar.component.html
+++ b/src/app/ui/blocks/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         (clicked)="handleClick($event)"
       ></mr-button-burguer>
       <figure class="navbar__logo">
-        <mr-image [image]="'assets/img/logo.png'" [alt]="'logo'"></mr-image>
+        <mr-image [image]="'assets/img/logo-blanco.png'" [alt]="'logo'"></mr-image>
       </figure>
     </div>
     <mr-aside-menu 
