--- a/src/app/ui/blocks/profile-user/profile-user.component.scss
+++ b/src/app/ui/blocks/profile-user/profile-user.component.scss
@@ -86,6 +86,13 @@ a {
     display: grid;
     gap: styles.$box-pad-double;
   }
+
+  &__back {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    z-index: 1;
+  }
 }
 
 @media (min-width: styles.$bkp-mobile) {
