--- a/src/app/shared/notices/notices-content-container/notices-content-container.component.html
+++ b/src/app/shared/notices/notices-content-container/notices-content-container.component.html
@@ -3,6 +3,7 @@
   channel: (channel$ | async)
 } as data">
     <mr-notices-content
+      *ngIf="data.notice"
       [notice]="data.notice"
       [channel]="data.channel"
     ></mr-notices-content>
